--- a/React/mini-blog-mongodb/package.json
+++ b/React/mini-blog-mongodb/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ex04-app",
+  "name": "mini-blog-mongodb",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,28 +7,24 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "react-scripts start"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^7.2.0",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.23",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^3.4.17",
     "vite": "^6.1.0"
   }
 }
